<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
    <com.suyonoion.loginexpanded.LoginExpanded android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
        <!-- FORM LOGIN -->
        <LinearLayout android:id="@+id/form_login_expanded" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:background="#C0C0C0" android:visibility="visible">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center" android:layout_marginTop="20dp" android:layout_weight="1.3">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
                    <ImageView android:layout_width="130dp" android:layout_height="130dp" android:src="@drawable/icon" android:background="@drawable/bingkai_bulat" android:padding="3dp" android:contentDescription="@string/str_desc_img_pp"/>
                    <TextView android:layout_width="fill_parent" android:layout_height="50dp" android:text="@string/str_expanded_terkunci" android:textSize="20sp" android:typeface="serif" android:layout_gravity="center" android:gravity="center" android:textColor="#f77a20"/>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="27dp" android:layout_marginRight="27dp" android:layout_marginBottom="27dp" android:layout_weight="1">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/bingkai_putih" android:layout_marginTop="30dp" android:padding="20dp">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:gravity="left|center" android:paddingBottom="5dp">
                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_nama" android:textColor="#808080" android:textSize="20sp" android:textStyle="bold" android:layout_marginBottom="5dp" android:id="@+id/txtView_nama"/>
                        <EditText android:layout_width="fill_parent" android:layout_height="30dp" android:inputType="textPersonName" android:ems="10" android:background="#ffffffff" android:id="@+id/editTxt_nama"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:gravity="left|center" android:paddingTop="5dp">
                        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_katakunci" android:textColor="#808080" android:textStyle="bold" android:textSize="20sp" android:layout_marginBottom="5dp"/>
                        <EditText android:layout_width="fill_parent" android:layout_height="30dp" android:inputType="textPassword" android:ems="10" android:background="#ffffffff" android:id="@+id/editTxt_password"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="top|center" android:layout_weight="1">
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="top|center" android:layout_marginTop="15dp" android:layout_marginBottom="15dp">
                            <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_buka" android:id="@+id/tombol_buka" android:background="@drawable/bingkai_tombol" android:textColor="#ffffffff" android:layout_weight="1"/>
                            <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_batal_abaikan" android:id="@+id/tombol_batal" android:textColor="#ffffffff" android:background="@drawable/bingkai_tombol" android:layout_weight="1"/>
                            <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_ganti_username_katakunci" android:id="@+id/tombol_set" android:layout_gravity="center_horizontal" android:layout_weight="1.5" android:textColor="#ffffffff" android:textSize="12sp" android:background="@drawable/bingkai_tombol"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <ImageView android:layout_width="60dp" android:layout_height="60dp" android:layout_gravity="center_horizontal" android:src="@drawable/putih_logo" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/str_logo_maaadgroup"/>
            </RelativeLayout>
        </LinearLayout>
        <!-- Muncul jika Login Sukses -->
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:gravity="center" android:background="#d69de212" android:visibility="gone" android:id="@+id/konten_sukses">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <Button android:layout_width="wrap_content" android:layout_height="30dp" android:text="@string/str_tombol_kunci" android:id="@+id/tombol_logout" android:textColor="#ffffffff" android:background="@drawable/bingkai_tombol" android:layout_gravity="right"/>
                <com.suyonoion.loginexpanded.ExpandedViewpagerUI android:id="@+id/id_viewpager" android:layout_width="match_parent" android:layout_height="match_parent">
                    <android.support.v4.view.PagerTabStrip android:textColor="#ffffffff" android:id="@+id/id_judul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="top" android:background="#90fece70">
                    </android.support.v4.view.PagerTabStrip>
                    <LinearLayout android:id="@+id/id_halaman_1" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@drawable/vp_background">
                        <TextView android:textSize="50sp" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_notifikasi" android:textColor="#ff473eff"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/id_halaman_2" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@drawable/vp_background">
                        <TextView android:textSize="50sp" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_page2" android:textColor="#ff473eff"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/id_halaman_3" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@drawable/vp_background">
                        <TextView android:textSize="50sp" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_page3" android:textColor="#ff473eff"/>
                    </LinearLayout>
                </com.suyonoion.loginexpanded.ExpandedViewpagerUI>
            </LinearLayout>
        </LinearLayout>
    </com.suyonoion.loginexpanded.LoginExpanded>
</LinearLayout>
